--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "karma start", 
+    "test": "karma start",
     "start": "node server.js"
   },
   "author": "Maddie Shang",
@@ -27,15 +27,16 @@
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
     "karma": "^0.13.22",
-    "karma-phantomjs-launcher": "^1.0.1",
     "karma-chrome-launcher": "^0.2.2",
     "karma-mocha": "^0.2.2",
     "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "phantomjs": "^2.1.7",
     "react-addons-test-utils": "^0.14.8",
+    "redux": "^3.5.2",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
